--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
 	id 'org.springframework.boot' version '3.1.0' //'2.7.14' //'3.1.0' //
 	id 'io.spring.dependency-management' version '1.1.3' //'1.1.0'
 	id 'java'
-	id 'io.freefair.lombok' version '6.6.3' //'8.4'
+	//id 'io.freefair.lombok' version '6.6.3' //'8.4'
 }
 
 group = 'brobot.elasticsearch'
@@ -17,10 +17,11 @@ repositories {
 }
 
 dependencies {
-	implementation files('../brobot/library/build/libs/brobot-1.0.7-plain.jar')
-	implementation files('..\\brobot-elastic\\build\\libs\\brobot-elastic-0.0.1-SNAPSHOT-plain.jar')
-	//implementation files('../elasticsearch-demo/target/elasticsearch-demo-1.0-SNAPSHOT.jar')
+	//implementation files('../brobot/library/build/libs/brobot-1.0.7-plain.jar')
+	//implementation files('../brobot-elastic/build/libs/brobot-elastic-0.0.1-SNAPSHOT-plain.jar')
+	implementation files('../elasticsearch-demo/target/elasticsearch-demo-1.0-SNAPSHOT.jar')
 
+	/*
 	implementation('com.sikulix:sikulixapi:2.0.5') {
 		exclude group: 'org.slf4j', module: 'slf4j-nop'
 	}
@@ -31,6 +32,8 @@ dependencies {
 	implementation "org.nd4j:nd4j-native-platform:1.0.0-M1"
 	implementation 'com.github.kwhat:jnativehook:2.2.2'
 
+
+	 */
 	implementation 'co.elastic.clients:elasticsearch-java:8.3.3'
 	implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.3'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
