--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,15 @@
 plugins {
-	id 'org.springframework.boot' version '3.1.0' //'2.7.14' //'3.1.0' //
-	id 'io.spring.dependency-management' version '1.1.3' //'1.1.0'
+	id 'org.springframework.boot' version '2.6.2' //'3.1.0' //'2.6.2' // moving beyond 2.6.2 causes running the app to produce an error in loading Brobot beans.
+	id 'io.spring.dependency-management' version '1.1.0' //'1.0.11.RELEASE' //
 	id 'java'
-	//id 'io.freefair.lombok' version '6.6.3' //'8.4'
+	id 'io.freefair.lombok' version '6.6.3' //'8.4'
 }
 
 group = 'brobot.elasticsearch'
 version = '0.0.1-SNAPSHOT'
 
 java {
-	sourceCompatibility = '20'
+	sourceCompatibility = '17'
 }
 
 repositories {
@@ -17,26 +17,25 @@ repositories {
 }
 
 dependencies {
-	//implementation files('../brobot/library/build/libs/brobot-1.0.7-plain.jar')
-	//implementation files('../brobot-elastic/build/libs/brobot-elastic-0.0.1-SNAPSHOT-plain.jar')
-	implementation files('../elasticsearch-demo/target/elasticsearch-demo-1.0-SNAPSHOT.jar')
+	implementation files('C:\\Users\\jspin\\Documents\\brobot_parent\\brobot\\library\\build\\libs\\brobot-1.0.7.jar')
+	//implementation files('C:\\Users\\jspin\\Documents\\brobot_parent\\elastic-demo-gradle\\build\\libs\\demo-1.jar')
 
-	/*
+	implementation 'org.springframework.boot:spring-boot-starter'
+	compileOnly 'org.projectlombok:lombok:1.18.22'
+	annotationProcessor 'org.projectlombok:lombok:1.18.22'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation('com.sikulix:sikulixapi:2.0.5') {
 		exclude group: 'org.slf4j', module: 'slf4j-nop'
 	}
-	implementation 'ch.qos.logback:logback-classic'
-
-	implementation 'com.squareup:javapoet:1.9.0'
+	implementation group: 'com.squareup', name: 'javapoet', version: '1.9.0'
 	implementation "org.deeplearning4j:deeplearning4j-core:1.0.0-M1"
 	implementation "org.nd4j:nd4j-native-platform:1.0.0-M1"
 	implementation 'com.github.kwhat:jnativehook:2.2.2'
 
-
-	 */
-	implementation 'co.elastic.clients:elasticsearch-java:8.3.3'
-	implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.3'
+	implementation 'co.elastic.clients:elasticsearch-java:8.9.0'
+	implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.7.1'
+	implementation 'org.springframework.boot:spring-boot-starter-web:3.1.2'
+	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch:3.1.5'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
 }
 
